// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Report Options should mount and render correctly 1`] = `
<div
  data-id="report-options"
>
  <Panel.LEGACY>
    <Panel.LEGACY.Section>
      <Grid>
        <Grid.Column
          md={6}
          xs={9}
        >
          <Connect(Typeahead)
            items={Array []}
            onSelect={[Function]}
            placeholder="Filter by domain, campaign, etc"
            reportOptions={
              Object {
                "filters": Array [],
                "from": 2018-02-15T12:00:00.000Z,
                "relativeRange": "day",
                "to": 2018-02-15T12:00:00.000Z,
              }
            }
            selected={Array []}
          />
        </Grid.Column>
        <Grid.Column
          md={2}
          mdOffset={4}
          xs={3}
        >
          <withRouter(Connect(ShareModal)) />
        </Grid.Column>
      </Grid>
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section>
      <Grid>
        <Grid.Column
          md={6}
          xs={12}
        >
          <div
            className="FieldWrapperMetricsRollup"
          >
            <DatePicker
              filters={Array []}
              from={2018-02-15T12:00:00.000Z}
              id="date-picker"
              label="Date Range"
              onChange={
                [MockFunction] {
                  "calls": Array [
                    Array [
                      Object {},
                    ],
                  ],
                  "results": undefined,
                }
              }
              preventFuture={true}
              relativeDateOptions={
                Array [
                  "hour",
                  "day",
                  "7days",
                  "30days",
                  "90days",
                  "custom",
                ]
              }
              relativeRange="day"
              roundToPrecision={true}
              selectPrecision={true}
              to={2018-02-15T12:00:00.000Z}
              updateShownPrecision={[Function]}
            />
          </div>
        </Grid.Column>
        <Grid.Column
          md={4}
          xs={6}
        >
          <div
            className="TimezoneTooltipWrapper"
          >
            <Tooltip
              content="Day, week, and month precision only support UTC."
              disabled={true}
            >
              <TimezoneTypeahead
                disabledAndUTCOnly={false}
                onChange={[Function]}
              />
            </Tooltip>
          </div>
        </Grid.Column>
        <Grid.Column
          md={2}
          xs={6}
        >
          <PrecisionSelector
            changeTime={
              [MockFunction] {
                "calls": Array [
                  Array [
                    Object {},
                  ],
                ],
                "results": undefined,
              }
            }
            from={2018-02-15T12:00:00.000Z}
            to={2018-02-15T12:00:00.000Z}
          />
        </Grid.Column>
      </Grid>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
</div>
`;

exports[`Component: Report Options with active filters should render 1`] = `
<div
  data-id="report-options"
>
  <Panel.LEGACY>
    <Panel.LEGACY.Section>
      <Grid>
        <Grid.Column
          md={6}
          xs={9}
        >
          <Connect(Typeahead)
            items={Array []}
            onSelect={[Function]}
            placeholder="Filter by domain, campaign, etc"
            reportOptions={
              Object {
                "filters": Array [
                  Object {
                    "type": "A",
                    "value": "aaa",
                  },
                  Object {
                    "type": "B",
                    "value": "bbb",
                  },
                  Object {
                    "type": "C",
                    "value": "ccc",
                  },
                ],
                "from": 2018-02-15T12:00:00.000Z,
                "relativeRange": "day",
                "to": 2018-02-15T12:00:00.000Z,
              }
            }
            selected={
              Array [
                Object {
                  "type": "A",
                  "value": "aaa",
                },
                Object {
                  "type": "B",
                  "value": "bbb",
                },
                Object {
                  "type": "C",
                  "value": "ccc",
                },
              ]
            }
          />
        </Grid.Column>
        <Grid.Column
          md={2}
          mdOffset={4}
          xs={3}
        >
          <withRouter(Connect(ShareModal)) />
        </Grid.Column>
      </Grid>
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section>
      <Grid>
        <Grid.Column
          md={6}
          xs={12}
        >
          <div
            className="FieldWrapperMetricsRollup"
          >
            <DatePicker
              filters={
                Array [
                  Object {
                    "type": "A",
                    "value": "aaa",
                  },
                  Object {
                    "type": "B",
                    "value": "bbb",
                  },
                  Object {
                    "type": "C",
                    "value": "ccc",
                  },
                ]
              }
              from={2018-02-15T12:00:00.000Z}
              id="date-picker"
              label="Date Range"
              onChange={
                [MockFunction] {
                  "calls": Array [
                    Array [
                      Object {},
                    ],
                  ],
                  "results": undefined,
                }
              }
              preventFuture={true}
              relativeDateOptions={
                Array [
                  "hour",
                  "day",
                  "7days",
                  "30days",
                  "90days",
                  "custom",
                ]
              }
              relativeRange="day"
              roundToPrecision={true}
              selectPrecision={true}
              to={2018-02-15T12:00:00.000Z}
              updateShownPrecision={[Function]}
            />
          </div>
        </Grid.Column>
        <Grid.Column
          md={4}
          xs={6}
        >
          <div
            className="TimezoneTooltipWrapper"
          >
            <Tooltip
              content="Day, week, and month precision only support UTC."
              disabled={true}
            >
              <TimezoneTypeahead
                disabledAndUTCOnly={false}
                onChange={[Function]}
              />
            </Tooltip>
          </div>
        </Grid.Column>
        <Grid.Column
          md={2}
          xs={6}
        >
          <PrecisionSelector
            changeTime={
              [MockFunction] {
                "calls": Array [
                  Array [
                    Object {},
                  ],
                ],
                "results": undefined,
              }
            }
            from={2018-02-15T12:00:00.000Z}
            to={2018-02-15T12:00:00.000Z}
          />
        </Grid.Column>
      </Grid>
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section>
      <small>
        Filters:
      </small>
      <Tag
        className="TagWrapper"
        key="0"
        onRemove={[Function]}
      >
        A
        : 
        aaa
      </Tag>
      <Tag
        className="TagWrapper"
        key="1"
        onRemove={[Function]}
      >
        B
        : 
        bbb
      </Tag>
      <Tag
        className="TagWrapper"
        key="2"
        onRemove={[Function]}
      >
        C
        : 
        ccc
      </Tag>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
</div>
`;
